sone new words added

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <button class="badge">Create playlist</button>
           </div>
           <div class="box">
-            <p class="box-p1">Let's find some podcasts to follow</p>
+            <p class="box-p1">Let's find some podcasts to follow you</p>
             <p class="box-p2">we'll keep you updated on new episodes</p>
             <button class="badge">Browse podcasts</button>
           </div>
